--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -32,15 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating schedule for 15 days between 2020-06-20 and 2020-09-10\n",
+      "Generating schedule for 217 days between 2020-09-01 and 2021-08-01\n",
+      "Starting at 2024-05-16 07:28:05\n",
       "\n",
+      "|2020-09-01|>>>|2021-06-30|>>>|2021-08-01|100.0%   ETC:0:00:00s   \n",
+      "\n",
+      "Finished at 2024-05-16 07:28:33\n",
       "\n"
      ]
     }
@@ -146,8 +159,8 @@
      "text": [
       "Removed 0 unused classrooms\n",
       "Removed 0 unused teachers\n",
-      "Removed 31 unused courses\n",
-      "Removed 0 unused classes\n"
+      "Removed 0 unused courses\n",
+      "Removed 1 unused classes\n"
      ]
     }
    ],
@@ -226,14 +239,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory data2 already exists\n"
+      "Directory data already exists\n"
      ]
     }
    ],
    "source": [
     "#This saves data to .csv files, in format compatible with the database\n",
     "\n",
-    "path = \"data2\"\n",
+    "path = \"data\"\n",
     "headers = False\n",
     "indexing = False\n",
     "\n",
@@ -252,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -260,17 +273,6 @@
      "output_type": "stream",
      "text": [
       "Directory backup already exists\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_students' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m indexing \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m      7\u001b[0m mkdir(path)\n\u001b[1;32m----> 9\u001b[0m \u001b[43mdf_students\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/students.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39mindexing, header\u001b[38;5;241m=\u001b[39mheaders)\n\u001b[0;32m     10\u001b[0m df_classes\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/classes.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39mindexing, header\u001b[38;5;241m=\u001b[39mheaders)\n\u001b[0;32m     11\u001b[0m df_teachers\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpath\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/teachers.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index\u001b[38;5;241m=\u001b[39mindexing, header\u001b[38;5;241m=\u001b[39mheaders)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_students' is not defined"
      ]
     }
    ],
@@ -296,48 +298,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#This cell loads data from csv files.\n",
     "\n",
-    "path = \"backup\"\n",
+    "# path = \"backup\"\n",
     "\n",
-    "df_classrooms = pd.read_csv(f\"{path}/classrooms.csv\")\n",
-    "df_teachers = pd.read_csv(f\"{path}/teachers.csv\")\n",
-    "df_courses = pd.read_csv(f\"{path}/courses.csv\")\n",
-    "df_classes = pd.read_csv(f\"{path}/classes.csv\")\n",
-    "df_students = pd.read_csv(f\"{path}/students.csv\")\n",
-    "df_meetings = pd.read_csv(f\"{path}/meetings.csv\")\n",
-    "df_exams = pd.read_csv(f\"{path}/exams.csv\")\n",
-    "df_surveys = pd.read_csv(f\"{path}/surveys.csv\")\n",
-    "df_attendance = pd.read_csv(f\"{path}/attendance.csv\")"
+    "# df_classrooms = pd.read_csv(f\"{path}/classrooms.csv\")\n",
+    "# df_teachers = pd.read_csv(f\"{path}/teachers.csv\")\n",
+    "# df_courses = pd.read_csv(f\"{path}/courses.csv\")\n",
+    "# df_classes = pd.read_csv(f\"{path}/classes.csv\")\n",
+    "# df_students = pd.read_csv(f\"{path}/students.csv\")\n",
+    "# df_meetings = pd.read_csv(f\"{path}/meetings.csv\")\n",
+    "# df_exams = pd.read_csv(f\"{path}/exams.csv\")\n",
+    "# df_surveys = pd.read_csv(f\"{path}/surveys.csv\")\n",
+    "# df_attendance = pd.read_csv(f\"{path}/attendance.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxExamID = len(df_exams)\n",
+    "maxSurveyID = len(df_surveys)\n",
+    "maxAttendanceID = len(df_attendance)\n",
+    "maxMeetingID = len(df_meetings)\n",
+    "\n",
+    "df_attendance_old = df_attendance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating schedule for 202 days between 2020-09-10 and 2021-06-20\n",
+      "Generating schedule for 217 days between 2021-08-01 and 2022-08-01\n",
+      "Starting at 2024-05-16 07:29:57\n",
       "\n",
+      "|2021-08-01|>>>|2022-06-30|>>>|2022-08-01|100.0%   ETC:0:00:00s   \n",
+      "\n",
+      "Finished at 2024-05-16 07:30:25\n",
       "\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# df_students = pd.concat([df_students, df_students_old])\n",
+    "df_students = pd.concat([df_students, df_students_old])\n",
     "\n",
     "df_meetings = meeting.generate(\n",
     "    count=parameters.meeting_count,\n",
-    "    startDate=parameters.start_date,\n",
-    "    endDate=parameters.end_date,\n",
+    "    startDate=parameters.end_date,\n",
+    "    endDate=parameters.end_date2,\n",
     "    schoolStart=parameters.school_start_hour,\n",
     "    schoolEnd=parameters.school_end_hour,\n",
     "    maxSchoolYears=parameters.max_school_years,\n",
@@ -380,46 +400,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"data2/exams.csv\", header=None)\n",
-    "df[0] = df[0] + 10000\n",
-    "df.to_csv(\"data2/exams.csv\", index=False, header=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"data2/surveys.csv\", header=None)\n",
-    "df[0] = df[0] + 10000\n",
-    "df.to_csv(\"data2/surveys.csv\", index=False, header=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory data already exists\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"data2/attendance.csv\", header=None)\n",
-    "df[7] = df[7] + 10000\n",
-    "df.to_csv(\"data2/attendance.csv\", index=False, header=False)"
+    "path = \"data\"\n",
+    "headers = False\n",
+    "indexing = False\n",
+    "\n",
+    "mkdir(path)\n",
+    "\n",
+    "df_students_old.drop(columns=[\"iq\"]).to_csv(f\"{path}/students2.csv\", index=indexing, header=headers)\n",
+    "\n",
+    "df_meetings[\"mID\"] = df_meetings[\"mID\"] + maxMeetingID\n",
+    "df_meetings.drop(columns=[\"StartHour\", \"EndHour\", \"Year\", \"Month\"]).to_csv(f\"{path}/meetings2.csv\", index=indexing, header=headers)\n",
+    "\n",
+    "df_surveys[\"mID\"] = df_surveys[\"mID\"] + maxMeetingID\n",
+    "df_surveys.to_csv(f\"{path}/surveys2.csv\", index=indexing, header=headers)\n",
+    "\n",
+    "df_exams[\"mID\"] = df_exams[\"mID\"] + maxMeetingID\n",
+    "df_exams.to_csv(f\"{path}/exams2.csv\", index=indexing, header=headers)\n",
+    "\n",
+    "\n",
+    "pd.concat([df_attendance, df_attendance_old])\n",
+    "df_attendance.to_csv(f\"{path}/attendance2.csv\", index=indexing, header=headers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-09-01 00:00:00\n",
+      "2020-09-02 00:00:00\n",
+      "2020-09-03 00:00:00\n",
+      "2020-09-04 00:00:00\n",
+      "2020-09-07 00:00:00\n",
+      "2020-09-08 00:00:00\n",
+      "2020-09-09 00:00:00\n",
+      "2020-09-10 00:00:00\n",
+      "2020-09-11 00:00:00\n",
+      "2020-09-14 00:00:00\n",
+      "2020-09-15 00:00:00\n",
+      "2020-09-16 00:00:00\n",
+      "2020-09-17 00:00:00\n",
+      "2020-09-18 00:00:00\n",
+      "2020-09-21 00:00:00\n",
+      "2020-09-22 00:00:00\n",
+      "2020-09-23 00:00:00\n",
+      "2020-09-24 00:00:00\n",
+      "2020-09-25 00:00:00\n",
+      "2020-09-28 00:00:00\n",
+      "2020-09-29 00:00:00\n",
+      "2020-09-30 00:00:00\n",
+      "2020-10-01 00:00:00\n",
+      "2020-10-02 00:00:00\n",
+      "2020-10-05 00:00:00\n",
+      "2020-10-06 00:00:00\n",
+      "2020-10-07 00:00:00\n",
+      "2020-10-08 00:00:00\n",
+      "2020-10-09 00:00:00\n",
+      "2020-10-12 00:00:00\n",
+      "2020-10-13 00:00:00\n",
+      "2020-10-14 00:00:00\n",
+      "2020-10-15 00:00:00\n",
+      "2020-10-16 00:00:00\n",
+      "2020-10-19 00:00:00\n",
+      "2020-10-20 00:00:00\n",
+      "2020-10-21 00:00:00\n",
+      "2020-10-22 00:00:00\n",
+      "2020-10-23 00:00:00\n",
+      "2020-10-26 00:00:00\n",
+      "2020-10-27 00:00:00\n",
+      "2020-10-28 00:00:00\n",
+      "2020-10-29 00:00:00\n",
+      "2020-10-30 00:00:00\n",
+      "2020-11-02 00:00:00\n",
+      "2020-11-03 00:00:00\n",
+      "2020-11-04 00:00:00\n",
+      "2020-11-05 00:00:00\n",
+      "2020-11-06 00:00:00\n",
+      "2020-11-09 00:00:00\n",
+      "2020-11-10 00:00:00\n",
+      "2020-11-11 00:00:00\n",
+      "2020-11-12 00:00:00\n",
+      "2020-11-13 00:00:00\n",
+      "2020-11-16 00:00:00\n",
+      "2020-11-17 00:00:00\n",
+      "2020-11-18 00:00:00\n",
+      "2020-11-19 00:00:00\n",
+      "2020-11-20 00:00:00\n",
+      "2020-11-23 00:00:00\n",
+      "2020-11-24 00:00:00\n",
+      "2020-11-25 00:00:00\n",
+      "2020-11-26 00:00:00\n",
+      "2020-11-27 00:00:00\n",
+      "2020-11-30 00:00:00\n",
+      "2020-12-01 00:00:00\n",
+      "2020-12-02 00:00:00\n",
+      "2020-12-03 00:00:00\n",
+      "2020-12-04 00:00:00\n",
+      "2020-12-07 00:00:00\n",
+      "2020-12-08 00:00:00\n",
+      "2020-12-09 00:00:00\n",
+      "2020-12-10 00:00:00\n",
+      "2020-12-11 00:00:00\n",
+      "2020-12-14 00:00:00\n",
+      "2020-12-15 00:00:00\n",
+      "2020-12-16 00:00:00\n",
+      "2020-12-17 00:00:00\n",
+      "2020-12-18 00:00:00\n",
+      "2020-12-21 00:00:00\n",
+      "2020-12-22 00:00:00\n",
+      "2020-12-23 00:00:00\n",
+      "2020-12-24 00:00:00\n",
+      "2020-12-25 00:00:00\n",
+      "2020-12-28 00:00:00\n",
+      "2020-12-29 00:00:00\n",
+      "2020-12-30 00:00:00\n",
+      "2020-12-31 00:00:00\n",
+      "2021-01-01 00:00:00\n",
+      "2021-01-04 00:00:00\n",
+      "2021-01-05 00:00:00\n",
+      "2021-01-06 00:00:00\n",
+      "2021-01-07 00:00:00\n",
+      "2021-01-08 00:00:00\n",
+      "2021-01-11 00:00:00\n",
+      "2021-01-12 00:00:00\n",
+      "2021-01-13 00:00:00\n",
+      "2021-01-14 00:00:00\n",
+      "2021-01-15 00:00:00\n",
+      "2021-01-18 00:00:00\n",
+      "2021-01-19 00:00:00\n",
+      "2021-01-20 00:00:00\n",
+      "2021-01-21 00:00:00\n",
+      "2021-01-22 00:00:00\n",
+      "2021-01-25 00:00:00\n",
+      "2021-01-26 00:00:00\n",
+      "2021-01-27 00:00:00\n",
+      "2021-01-28 00:00:00\n",
+      "2021-01-29 00:00:00\n",
+      "2021-02-01 00:00:00\n",
+      "2021-02-02 00:00:00\n",
+      "2021-02-03 00:00:00\n",
+      "2021-02-04 00:00:00\n",
+      "2021-02-05 00:00:00\n",
+      "2021-02-08 00:00:00\n",
+      "2021-02-09 00:00:00\n",
+      "2021-02-10 00:00:00\n",
+      "2021-02-11 00:00:00\n",
+      "2021-02-12 00:00:00\n",
+      "2021-02-15 00:00:00\n",
+      "2021-02-16 00:00:00\n",
+      "2021-02-17 00:00:00\n",
+      "2021-02-18 00:00:00\n",
+      "2021-02-19 00:00:00\n",
+      "2021-02-22 00:00:00\n",
+      "2021-02-23 00:00:00\n",
+      "2021-02-24 00:00:00\n",
+      "2021-02-25 00:00:00\n",
+      "2021-02-26 00:00:00\n",
+      "2021-03-01 00:00:00\n",
+      "2021-03-02 00:00:00\n",
+      "2021-03-03 00:00:00\n",
+      "2021-03-04 00:00:00\n",
+      "2021-03-05 00:00:00\n",
+      "2021-03-08 00:00:00\n",
+      "2021-03-09 00:00:00\n",
+      "2021-03-10 00:00:00\n",
+      "2021-03-11 00:00:00\n",
+      "2021-03-12 00:00:00\n",
+      "2021-03-15 00:00:00\n",
+      "2021-03-16 00:00:00\n",
+      "2021-03-17 00:00:00\n",
+      "2021-03-18 00:00:00\n",
+      "2021-03-19 00:00:00\n",
+      "2021-03-22 00:00:00\n",
+      "2021-03-23 00:00:00\n",
+      "2021-03-24 00:00:00\n",
+      "2021-03-25 00:00:00\n",
+      "2021-03-26 00:00:00\n",
+      "2021-03-29 00:00:00\n",
+      "2021-03-30 00:00:00\n",
+      "2021-03-31 00:00:00\n",
+      "2021-04-01 00:00:00\n",
+      "2021-04-02 00:00:00\n",
+      "2021-04-05 00:00:00\n",
+      "2021-04-06 00:00:00\n",
+      "2021-04-07 00:00:00\n",
+      "2021-04-08 00:00:00\n",
+      "2021-04-09 00:00:00\n",
+      "2021-04-12 00:00:00\n",
+      "2021-04-13 00:00:00\n",
+      "2021-04-14 00:00:00\n",
+      "2021-04-15 00:00:00\n",
+      "2021-04-16 00:00:00\n",
+      "2021-04-19 00:00:00\n",
+      "2021-04-20 00:00:00\n",
+      "2021-04-21 00:00:00\n",
+      "2021-04-22 00:00:00\n",
+      "2021-04-23 00:00:00\n",
+      "2021-04-26 00:00:00\n",
+      "2021-04-27 00:00:00\n",
+      "2021-04-28 00:00:00\n",
+      "2021-04-29 00:00:00\n",
+      "2021-04-30 00:00:00\n",
+      "2021-05-03 00:00:00\n",
+      "2021-05-04 00:00:00\n",
+      "2021-05-05 00:00:00\n",
+      "2021-05-06 00:00:00\n",
+      "2021-05-07 00:00:00\n",
+      "2021-05-10 00:00:00\n",
+      "2021-05-11 00:00:00\n",
+      "2021-05-12 00:00:00\n",
+      "2021-05-13 00:00:00\n",
+      "2021-05-14 00:00:00\n",
+      "2021-05-17 00:00:00\n",
+      "2021-05-18 00:00:00\n",
+      "2021-05-19 00:00:00\n",
+      "2021-05-20 00:00:00\n",
+      "2021-05-21 00:00:00\n",
+      "2021-05-24 00:00:00\n",
+      "2021-05-25 00:00:00\n",
+      "2021-05-26 00:00:00\n",
+      "2021-05-27 00:00:00\n",
+      "2021-05-28 00:00:00\n",
+      "2021-05-31 00:00:00\n",
+      "2021-06-01 00:00:00\n",
+      "2021-06-02 00:00:00\n",
+      "2021-06-03 00:00:00\n",
+      "2021-06-04 00:00:00\n",
+      "2021-06-07 00:00:00\n",
+      "2021-06-08 00:00:00\n",
+      "2021-06-09 00:00:00\n",
+      "2021-06-10 00:00:00\n",
+      "2021-06-11 00:00:00\n",
+      "2021-06-14 00:00:00\n",
+      "2021-06-15 00:00:00\n",
+      "2021-06-16 00:00:00\n",
+      "2021-06-17 00:00:00\n",
+      "2021-06-18 00:00:00\n",
+      "2021-06-21 00:00:00\n",
+      "2021-06-22 00:00:00\n",
+      "2021-06-23 00:00:00\n",
+      "2021-06-24 00:00:00\n",
+      "2021-06-25 00:00:00\n",
+      "2021-06-28 00:00:00\n",
+      "2021-06-29 00:00:00\n",
+      "2021-06-30 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"data2/meetings.csv\", header=None)\n",
-    "df[0] = df[0] + 10000\n",
-    "df.to_csv(\"data2/meetings.csv\", index=False, header=False)"
+    "import utils as u\n",
+    "\n",
+    "x = u.generateDates(parameters.start_date, parameters.end_date)\n",
+    "for i in x:\n",
+    "    print(i)"
    ]
   },
   {
@@ -446,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
