--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -41,19 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating schedule for 217 days between 2020-09-01 and 2021-08-01\n",
-      "Starting at 2024-05-16 07:28:05\n",
+      "Generating schedule for 2382 days between 2010-09-01 and 2021-08-01\n",
+      "Starting at 2024-05-21 23:02:37\n",
       "\n",
-      "|2020-09-01|>>>|2021-06-30|>>>|2021-08-01|100.0%   ETC:0:00:00s   \n",
+      "|2010-09-01|>>>|2021-06-30|>>>|2021-08-01|100.0%   ETC:0:00:00s   \n",
       "\n",
-      "Finished at 2024-05-16 07:28:33\n",
+      "Finished at 2024-05-21 23:34:51\n",
       "\n"
      ]
     }
@@ -150,7 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1312440"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_meetings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,9 +169,9 @@
      "output_type": "stream",
      "text": [
       "Removed 0 unused classrooms\n",
-      "Removed 0 unused teachers\n",
+      "Removed 119 unused teachers\n",
       "Removed 0 unused courses\n",
-      "Removed 1 unused classes\n"
+      "Removed 0 unused classes\n"
      ]
     }
    ],
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,21 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory data already exists\n"
+      "Directory data3 already exists\n"
      ]
     }
    ],
    "source": [
     "#This saves data to .csv files, in format compatible with the database\n",
     "\n",
-    "path = \"data\"\n",
+    "path = \"data3\"\n",
     "headers = False\n",
     "indexing = False\n",
     "\n",
